--- a/staticwebapp.database.config.json
+++ b/staticwebapp.database.config.json
@@ -1,42 +1,48 @@
 {
     "$schema": "https://github.com/Azure/data-api-builder/releases/latest/download/dab.draft.schema.json",
     "data-source": {
-      "database-type": "mssql",
-      "options": {
-        "set-session-context": false 
-      },
-      "connection-string": "@env('DATABASE_CONNECTION_STRING')"
+        "database-type": "mssql",
+        "options": {
+            "set-session-context": false 
+        },
+        "connection-string": "@env('DATABASE_CONNECTION_STRING')"
     },
     "runtime": {
-      "rest": {
-        "enabled": true,
-        "path": "/rest"
-      },
-      "graphql": {
-        "allow-introspection": true,
-        "enabled": true,
-        "path": "/graphql"
-      },
-      "host": {
-        "mode": "production",
-        "cors": {
-          "origins": ["http://localhost:4280"],
-          "allow-credentials": false
+        "rest": {
+            "enabled": true,
+            "path": "/rest"
         },
-        "authentication": {
-          "provider": "StaticWebApps"
+        "graphql": {
+            "allow-introspection": true,
+            "enabled": true,
+            "path": "/graphql"
+        },
+        "host": {
+            "mode": "production",
+            "cors": {
+                "origins": ["http://localhost:4280"],
+                "allow-credentials": false
+            },
+            "authentication": {
+                "provider": "StaticWebApps"
+            }
         }
-      }
     },
     "entities": {
-      "Person": {
-        "source": "dbo.MyTestPersonTable",
-        "permissions": [
-          {
-            "actions": ["create", "read", "update", "delete"],
-            "role": "anonymous"
-          }
-        ]
-      }
-    }
-  }
+        "Person": {
+            "source": "dbo.MyTestPersonTable",
+            "permissions": [
+                {
+                    "actions": ["create", "read", "update", "delete"],
+                    "role": "anonymous"
+                }
+            ]
+        }
+    },
+    "routes": [
+        {
+            "route": "/api/*",
+            "allowedRoles": ["anonymous"]
+        }
+    ]
+}
