--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "api",
+    "name": "azure-function-app",
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-      "@azure/cosmos": "^3.9.3"
+      "@azure/cosmos": "^3.11.0"
     }
   }
   
