--- a/staticwebapp.database.config.json
+++ b/staticwebapp.database.config.json
@@ -1,48 +1,13 @@
 {
-    "$schema": "https://github.com/Azure/data-api-builder/releases/latest/download/dab.draft.schema.json",
-    "data-source": {
-        "database-type": "mssql",
-        "options": {
-            "set-session-context": false 
-        },
-        "connection-string": "@env('DATABASE_CONNECTION_STRING')"
-    },
-    "runtime": {
-        "rest": {
-            "enabled": true,
-            "path": "/rest"
-        },
-        "graphql": {
-            "allow-introspection": true,
-            "enabled": true,
-            "path": "/graphql"
-        },
-        "host": {
-            "mode": "production",
-            "cors": {
-                "origins": ["http://localhost:4280"],
-                "allow-credentials": false
-            },
-            "authentication": {
-                "provider": "StaticWebApps"
-            }
-        }
-    },
-    "entities": {
-        "Person": {
-            "source": "dbo.MyTestPersonTable",
-            "permissions": [
-                {
-                    "actions": ["create", "read", "update", "delete"],
-                    "role": "anonymous"
-                }
-            ]
-        }
-    },
+    "$schema": "https://github.com/Azure/static-web-apps/blob/main/docs/v1.0/schemas/config-file.schema.json",
     "routes": [
         {
             "route": "/api/*",
             "allowedRoles": ["anonymous"]
         }
-    ]
+    ],
+    "navigationFallback": {
+        "rewrite": "index.html",
+        "exclude": ["/api/*"]
+    }
 }
