--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -1,19 +1,35 @@
 {
-    "$schema": "https://github.com/Azure/static-web-apps/blob/main/docs/v1.0/schemas/config-file.schema.json",
-    "routes": [
-        {
-            "route": "/api/*",
-            "allowedRoles": ["anonymous"],
-            "methods": ["GET", "POST"]
-        },
-        {
-            "route": "/api/createEntry/index.js",
-            "allowedRoles": ["anonymous"],
-            "methods": ["GET", "POST"]
-        }
-    ],
-    "navigationFallback": {
-        "rewrite": "index.html",
-        "exclude": ["/api/*"]
+  "$schema": "https://github.com/Azure/data-api-builder/releases/download/v0.9.7/dab.draft.schema.json",
+  "data-source": {
+    "database-type": "cosmosdb_nosql",
+    "connection-string": "",
+    "options": {
+      "database": "face-storage-testing",
+      "container": null,
+      "schema": "staticwebapp.database.schema.gql"
     }
+  },
+  "runtime": {
+    "rest": {
+      "enabled": false,
+      "path": "/api",
+      "request-body-strict": true
+    },
+    "graphql": {
+      "enabled": true,
+      "path": "/graphql",
+      "allow-introspection": true
+    },
+    "host": {
+      "cors": {
+        "origins": [],
+        "allow-credentials": false
+      },
+      "authentication": {
+        "provider": "StaticWebApps"
+      },
+      "mode": "production"
+    }
+  },
+  "entities": {}
 }
